tests/e2e/tests/pilot/testdata/headless.yaml
# To test non-headless to headless with/without istio auth
apiVersion: v1
kind: Service
metadata:
  name: headless-b
  labels:
    app: b
spec:
  clusterIP: None
  ports:
  - port: 80
    name: http
  - port: 8080
    name: http-two
  - port: 10090
    name: tcp
  - port: 70
    name: http2-example
  - port: 7070
    name: grpc
  selector:
    app: b
