tests/e2e/tests/pilot/testdata/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: istio
spec:
  tls:
    - secretName: istio-ingress-certs
  rules:
  - host: foo.bar.com
    http:
      paths:
      - path: /foo
        backend:
          serviceName: a
          servicePort: 8080
  - host: "*.baz.com"
    http:
      paths:
      - path: /bar
        backend:
          serviceName: a
          servicePort: 8080
  - host: api.company.com
    http:
      paths:
      - backend:
          serviceName: a
          servicePort: grpc
  - http:
      paths:
      - path: /lucky
        backend:
          serviceName: a
          servicePort: 8080
      - path: /lo.*
        backend:
          serviceName: b
          servicePort: 80
      - path: /.well_known/foo
        backend:
            serviceName: a
            servicePort: 80
      - path: /io.grpc/method
        backend:
            serviceName: a
            servicePort: 80
      - path: /c
        backend:
          serviceName: c
          servicePort: http
      - path: /http
        backend:
          serviceName: a
          servicePort: http
      - path: /pasta
        backend:
          serviceName: b
          servicePort: 8080
      - path: /.*
        backend:
          serviceName: a
          servicePort: grpc
