tests/e2e/tests/pilot/testdata/job.yaml
# Copyright 2019 Istio Authors
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.
apiVersion: batch/v1
kind: Job
metadata:
  name: {{.name}}
spec:
  template:
    spec:
      containers:
        - name: test
          image: pstauffer/curl
          command: ["sh", "-c", "while :; do sleep 1s; ret=`curl -o /dev/null -s -w %{http_code} -X POST http://127.0.0.1:15020/quitquitquit`; if  [ $ret -eq 200 ]; then break; fi; done"]
      restartPolicy: Never
